# laser-mazer

./: .gitignore  Cargo.toml  README.md
assets/: all.xcf
src/: app.rs  checker.rs  main.rs  orientation.rs  pieces.rs  solver.rs  solver_node.rs  solver_node2.rs  token.rs
src/app/: challenges.rs  menus.rs  resources.rs  widgets.rs
src/app/widgets/: bank.rs  cell.rs  grid.rs
src/app/widgets/cell/: collections.rs
src/solver/: checker.rs  orientation.rs  solver_node.rs  token.rs
src/solver/solver_node/: active_laser.rs
src/solver_node/: active_laser.rs
