[package]
name = "laser-mazer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test] 
opt-level = 3

[dependencies]
eframe = "0.22.0"
egui_extras = { version = "0.22.0", features = ["image"] }
lazy_static = "1.4.0"
tokio = { version = "1.29.1", features = ["full"] }
